# recommandations

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/grafana/dashboards/: dashboard.json
configs/prometheus/: prometheus.yml
service/: app.py  database.py  settings.py
service/api/: __init__.py
service/api/v1/: __init__.py
service/api/v1/auth/: views.py
service/api/v1/movies/: views.py
service/apps/auth/: depends.py
service/apps/movie/: exceptions.py  models.py  schemas.py  tasks.py
service/apps/user/: exceptions.py  models.py  schemas.py
service/core/: exceptions.py  workers.py
service/migrations/: env.py
service/migrations/versions/: 455381d0dd27_movie_and_rating_model.py  8b883f12cd00_initial.py
