[tool.poetry]
name = "recommandations"
version = "0.1.0"
description = ""
authors = ["Andrey Kletsko <andrey.daraschenka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.45"
asyncpg = "^0.27.0"
email-validator = "^1.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
